fixed spacing css bug

--- a/app/assets/stylesheets/rooms.css.scss
+++ b/app/assets/stylesheets/rooms.css.scss
@@ -9,7 +9,7 @@
 }
 
 #messages {
-  margin-bottom: 100px;
+  margin-bottom: 120px;
   margin-left: 3px;
   -moz-box-shadow: 0 2px 5px rgba(104, 104, 104, 0.62);
   -webkit-box-shadow: 0 2px 5px rgba(104, 104, 104, 0.62);
